# sklearn-pipeline-example

./: app.py  inference.py  pipe.pk  pyproject.toml  tasks.py  train.py
my_sklearn/: my_sklearn.py
