[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["GregHilston <Gregory.Hilston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

