[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["GregHilston <Gregory.Hilston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
mypy = "^0.910"
flake8 = "^3.9.2"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
# read about the settings available here: https://github.com/PyCQA/isort/wiki/isort-Settings

# while we can use the `profile = black` here: https://github.com/PyCQA/isort/blob/main/isort/profiles.py
# I don't love the line_length amount so I'm manually defining these

# defines a mode for how multi line outputs will perform
# one can read more about these here https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes/
# i like the "vertical hanging indent"
multi_line_output = 3

# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true

# isort will combine as imports on the same line within for import statements. By default isort forces all as imports to display on their own lines.
combine_as_imports = true
